--- a/app/globals.css
+++ b/app/globals.css
@@ -16,7 +16,9 @@
 .image_here_extra_border{
     border-radius: 30% 70% 70% 30% / 46% 70% 30% 54% ;
 }
-
+.colorme{
+    border: 1px solid black;
+}
 
 
 
